--- a/style.css
+++ b/style.css
@@ -191,7 +191,9 @@ html, body{
 }
 
 #page2{
-    height: 100vh;
+    margin-top: 272px;
+    padding-top: 100px;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -286,7 +288,7 @@ html, body{
 #page4{
     width: 100%;
     background-color: #c2bbb1;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     gap: 2.8vw;
     padding-bottom: 2vw;
@@ -446,7 +448,7 @@ html, body{
 /* page 5 */
 
 #page5{
-    height: 130vh;
+    min-height: 100vh;
     width: 100%;
     padding: 0 2vw;
 }
@@ -604,14 +606,14 @@ html, body{
 /* page6 */
 
 #page6{
-    height: 78vh;
+    min-height: 100vh;
     width: 100%;
     padding: 0vw 2vw;
 
 }
 
 #page6 .top{
-    height: 45%;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -620,7 +622,6 @@ html, body{
 
 #page6 .top h1{
     font-size: 26vw;
-    height: 100%;
     letter-spacing: -9px;
     font-weight: 100;
     width: 67%;
